--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Prologue</title>
+<title>Matej Pribiš</title>
 <meta charset="utf-8">
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css">
 <!--[if lte IE 8]>
@@ -27,8 +27,8 @@
 <div id="header" class="skel-panels-fixed">
   <div class="top">
     <div id="logo"> <span class="image avatar48"><img src="images/avatar.jpg" alt=""></span>
-      <h1 id="title">Jane Doe</h1>
-      <span class="byline">Hyperspace Engineer</span> </div>
+      <h1 id="title">Matej Pribiš</h1>
+      <span class="byline">LF?</span> </div>
     <nav id="nav">
       <ul>
         <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="icon icon-home">Intro</span></a></li>
@@ -58,6 +58,7 @@
       <footer> <a href="#portfolio" class="button scrolly">Magna Aliquam</a> </footer>
     </div>
   </section>
+  <!--
   <section id="portfolio" class="two">
     <div class="container">
       <header>
@@ -104,6 +105,7 @@
       </div>
     </div>
   </section>
+  -->
   <section id="about" class="three">
     <div class="container small">
       <header>
@@ -142,7 +144,7 @@
 </div>
 <div id="footer">
   <div class="copyright">
-    <p>&copy; 2045 Jane Doe. All rights reserved.</p>
+    <p>&copy; 2016 Matej Pribiš. All rights reserved.</p>
     <ul class="menu">
       <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
     </ul>
