--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 </div>
 <div id="main">
   <section id="top" class="one">
-    <div class="container small"> <a href="#" class="image featured"><img src="images/pic01.jpg" alt=""></a>
+    <div class="container small"> <a href="#" class="image featured"><img src="images/under_construction.png" alt=""></a>
       <header>
-        <h2 class="alt">This is <strong>Prologue</strong>. A free, fully responsive site template by HTML5 UP.</h2>
+        <h2 class="alt">Hello and welcome strangers! My name is Matej Pribiš.</h2>
       </header>
-      <p>Ligula scelerisque justo sem accumsan diam quis. Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis egestas rhoncus ridiculus in quis risus curabitur tempor. Orci penatibus quisque laoreet condimentum sollicitudin accumsan elementum.</p>
+      <p>.</p>
       <footer> <a href="#portfolio" class="button scrolly">Magna Aliquam</a> </footer>
     </div>
   </section>
@@ -105,7 +105,6 @@
       </div>
     </div>
   </section>
-  -->
   <section id="about" class="three">
     <div class="container small">
       <header>
@@ -140,7 +139,7 @@
         </div>
       </form>
     </div>
-  </section>
+  </section> -->
 </div>
 <div id="footer">
   <div class="copyright">
