--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Matej Pribiš
 ---
 <div id="main">
   <section id="top" class="one">
