--- a/index.html
+++ b/index.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Matej Pribiš</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<title>Matej Pribis</title>
 	</head>
+
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Matej Pribiš!</h1>
-				<p>And I am currently working on my new personal site here.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:matejpribis@gmail.com">email</a></li>
-        		<li><a href="https://github.com/pribism">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
+		<div id="lsb"> <!--lsb = left sidebar -->
+			<img id="avatar" src="file:////Users/matejpribis/Documents/page/pribism.github.io/pictures/fotoatelier1ed.jpg">
+			<p id="name">Matej Pribiš</p>
+			<p id="uni">MD Student at Charles University in Prague</p>
+		</div>
+		<div class="main">main</div>
+		<div id="foot">footer</div>
 	</body>
 </html>
