--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
 	<head>
 		<title>Matej Pribiš</title>
+		 <link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 
 	<body>
 		<div id="lsb"> <!--lsb = left sidebar -->
-			<img id="avatar" src="file:////Users/matejpribis/Documents/page/pribism.github.io/pictures/fotoatelier1ed.jpg">
+			<img id="avatar" src="/pictures/fotoatelier1ed.jpg">
 			<h3 id="name">Matej Pribiš</h3>
 			<h3 id="uni">MD Student at Charles University in Prague</h3>
 			<br></br>
 			<ul>
-				<li><a href="file:////Users/matejpribis/Documents/page/pribism.github.io/index.html">Home</a></li>
+				<li><a href="/index.html">Home</a></li>
 				<li><a href="/about.html">About</a></li>
 				<li><a href="/Blog.html">Blog</a></li>
 				<li><a href="/index.html">My CV</a></li>
 			</ul>
 		</div>
 		<div class="main">
-			<img src="file:////Users/matejpribis/Documents/page/pribism.github.io/pictures/DTI-sagittal-fibers.jpg">
+			<img src="/pictures/DTI-sagittal-fibers.jpg">
 			<h1>Welcome!</h1>
 			<p class="top">
 				My name is Matej Pribiš and currently I am a 2nd year student at 2nd Faculty of Medicine (former: Faculty of Paediatric medicine) of Charles University in Prague. 
