--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<ul>
 				<li><a href="/index.html">Home</a></li>
 				<li><a href="/about.html">About</a></li>
-				<li><a href="/Blog.html">Blog</a></li>
+				<li><a href="/blog">Blog</a></li>
 				<li><a href="/index.html">My CV</a></li>
 			</ul>
 		</div>
