--- a/index.html
+++ b/index.html
@@ -1,41 +1,17 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Matej Pribiš</title>
-		 <link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
+---
+layout: default
+title: Matej Pribiš
+---
 
-	<body>
-		<div id="lsb"> <!--lsb = left sidebar -->
-			<img id="avatar" src="/pictures/fotoatelier1ed.jpg">
-			<h3 id="name">Matej Pribiš</h3>
-			<h3 id="uni">MD Student at Charles University in Prague</h3>
-			<br></br>
-			<ul>
-				<li><a href="/index.html">Home</a></li>
-				<li><a href="/about.html">About</a></li>
-				<li><a href="/blog">Blog</a></li>
-				<li><a href="/index.html">My CV</a></li>
-			</ul>
-		</div>
-		<div class="main">
-			<img src="/pictures/DTI-sagittal-fibers.jpg">
-			<h1>Welcome!</h1>
-			<p class="top">
-				My name is Matej Pribiš and currently I am a 2nd year student at 2nd Faculty of Medicine (former: Faculty of Paediatric medicine) of Charles University in Prague. 
-				
-				<!--Tak, tu bude nieco o mne napisane, lebo sa mam hrozne rad a som moc velky borec.-->
-			</p>
+<img src="/pictures/DTI-sagittal-fibers.jpg">
+<h1>Welcome!</h1>
+<p class="top">
+	My name is Matej Pribiš and currently I am a 2nd year student at 2nd Faculty of Medicine (former: Faculty of Paediatric medicine) of Charles University in Prague. 
+	<!--Tak, tu bude nieco o mne napisane, lebo sa mam hrozne rad a som moc velky borec.-->
+</p>
 			
-			<p class="bottom">
-				My biggest life passions are revolving around different fields of science, but mostly around biology. I am fascinated by cell and molecular biology as well as genetics, mostly those related to mental functions of an individual. That's because of my second biggest love, which is psychology. Last, but not least, I spend some of my time playing around bioinformatics and data processing. 
-			</p>
+<p class="bottom">
+	My biggest life passions are revolving around different fields of science, but mostly around biology. I am fascinated by cell and molecular biology as well as genetics, mostly those related to mental functions of an individual. That's because of my second biggest love, which is psychology. Last, but not least, I spend some of my time playing around bioinformatics and data processing. 
+</p>
 
-		</div>
-		<div id="foot">
-			<a href=""></a>
-			<a href=""></a>
-				
-		</div>
-	</body>
-</html>
+		
