index - added div
deleted borders, added footer, changing single paragraphs to div on
main page

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
 		</div>
 		<div class="main">
 			<img src="file:////Users/matejpribis/Documents/page/pribism.github.io/pictures/DTI-sagittal-fibers.jpg">
-			<h1>Welcome!</h1>
-			<p class="top">
+			<div>
+				<h1>Welcome!</h1>
+				<p>
 				My name is Matej Pribiš and currently I am a 2nd year student at 2nd Faculty of Medicine (former: Faculty of Paediatric medicine) of Charles University in Prague. 
 				
 				<!--Tak, tu bude nieco o mne napisane, lebo sa mam hrozne rad a som moc velky borec.-->
-			</p>
+				</p>
 			
-			<p class="bottom">
+				<p>
 				My biggest life passions are revolving around different fields of science, but mostly around biology. I am fascinated by cell and molecular biology as well as genetics, mostly those related to mental functions of an individual. That's because of my second biggest love, which is psychology. Last, but not least, I spend some of my time playing around bioinformatics and data processing. 
-			</p>
+				</p>
+			</div>
 
 		</div>
 		<div id="foot">
