position of main div

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Matej Pribiš
 ---
 
 <img src="/pictures/DTI-sagittal-fibers.jpg">
-<div>
+<div id="indexm">
 <h1>Welcome!</h1>
 <p>
 	My name is Matej Pribiš and currently I am a 2nd year student at 2nd Faculty of Medicine (former: Faculty of Paediatric medicine) of Charles University in Prague. 
