--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-title: Matej Pribiš
+title: Home
 ---
 
-
+{% assign page = site.posts.first %}
+{% assign content = page.content %}
+{% include post.html %}
