site menu creation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Home
+title: Matej Pribis - neuroscientist and psychiatrist
+food: "pizza"
 ---
 
 {% assign page = site.posts.first %}
